# personla-kb

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: manual-qa.md
docs/superpowers/plans/: 2026-05-03-personal-knowledge-base-agent.md  2026-05-03-phase-2-ai-understanding-layer.md  2026-05-04-telegram-compact-responses.md  2026-05-05-visible-notes-and-bold-save-labels.md  2026-05-08-instagram-reels-ingestion.md
docs/superpowers/specs/: 2026-05-03-personal-knowledge-base-agent-design.md  2026-05-03-phase-2-ai-understanding-layer-design.md  2026-05-04-telegram-compact-response-design.md  2026-05-05-visible-notes-and-bold-save-labels-design.md  2026-05-08-instagram-reels-ingestion-design.md
src/kb_agent/: app.py  config.py
src/kb_agent/ai/: __init__.py  briefs.py  gemini.py  ollama.py  providers.py  router.py
src/kb_agent/core/: aliases.py  archive_review.py  digests.py  models.py  ports.py  retrieval.py  service.py
src/kb_agent/extraction/: __init__.py  extractors.py  url_parser.py
tests/: test_app.py  test_config.py  test_package_import.py
tests/ai/: test_briefs.py  test_gemini_provider.py  test_heuristic_provider.py  test_ollama_provider.py  test_router.py
tests/core/: test_aliases.py  test_archive_review.py  test_digests.py  test_knowledge_service.py  test_models.py  test_retrieval.py
tests/extraction/: test_extractors.py  test_url_parser.py
tests/scheduler/: test_jobs.py
tests/storage/: test_sqlite_repository.py
tests/telegram/: test_bot_adapter.py  test_formatter.py  test_parser.py
(+8 files in other folders)
