[project]
name = "personal-kb-agent"
version = "0.0.4"
description = "Telegram-first personal knowledge base agent"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
ai = [
  "openai>=1.40",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
